fixing fount size on smaller displays

--- a/styles.css
+++ b/styles.css
@@ -564,6 +564,6 @@ footer a:hover {
 /* Small devices (phones, 600px and down) */
 @media only screen and (max-width: 480px) {
   .content {
-    font-size: 0.5rem;
+    font-size: 0.65rem;
   }
 }
